<resources>
    <string name="app_name">Leaving Earth Outcome</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="use_research">Use an acquired Research</string>
    <string name="new_research">Acquire a new Research</string>
    <string name="title_activity_display_research">Display Research Activity</string>
    <string name="title_activity_new_research">Acquire a new Research</string>
    <string name="title_activity_use_research">Use an acquired Research</string>
    <string name="activate_research">Get outcome</string>
    <string name="reset">reset</string>
    <string name="seed_title">Seed</string>
    <string name="remove_three_outcomes">Removes 3 outcome</string>
    <string name="remove_one_outcome">Removes 1 outcome</string>
    <string name="outer_planets_title">\'Outer Planets\' expansion researches</string>
    <string name="stations_title">\'Stations\' expansion researches</string>
    <string name="dynamic_researches_title">Dynamic (move, resize) new research</string>
</resources>
